samples/_failures_safe/1761376572_0a771b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34a9ea79.c: In function ‘load_log_file’:
./samples/SAFE/__tmp_34a9ea79.c:128:32: error: expected ‘)’ at end of input
  128 |     FILE *file = fopen(filename
      |                       ~        ^
      |                                )
./samples/SAFE/__tmp_34a9ea79.c:128:18: error: too few arguments to function ‘fopen’
  128 |     FILE *file = fopen(filename
      |                  ^~~~~
In file included from ./samples/SAFE/__tmp_34a9ea79.c:2:
/usr/include/stdio.h:264:14: note: declared here
  264 | extern FILE *fopen (const char *__restrict __filename,
      |              ^~~~~
./samples/SAFE/__tmp_34a9ea79.c:128:5: error: expected declaration or statement at end of input
  128 |     FILE *file = fopen(filename
      |     ^~~~
